--- a/Prototype/styles.css
+++ b/Prototype/styles.css
@@ -66,7 +66,7 @@
 	background-color: black;
 	margin-top: 50px;
     text-align: center;
-    height: 100px;
+    height: 200px;
     padding-bottom: 30px;
     vertical-align: bottom;
 }
@@ -94,10 +94,28 @@
 
 h1 {
     color: white;
+	font-family: Tahoma;
     text-align: center;
 }
 
+h2{
+	font-family: Tahoma, Geneva, sans-serif;
+}
+
+h3 {
+    padding-top: 20px;
+	font-family: Tahoma, Geneva, sans-serif;
+	color: white;
+	text-align: center;
+	font-size: 12;
+}
+
 p {
-    font-family: verdana;
+    font-family: Tahoma, Geneva, sans-serif;
     font-size: 18px;
+}
+
+a {
+	color:black;
+	text-decoration:none; 
 }
