--- a/WebContent/CSS/page1.css
+++ b/WebContent/CSS/page1.css
@@ -512,9 +512,32 @@ position:absolute;
 }
 
 
+.slider {
+    position: relative;
+    height: 10px;
+    width: 50%;
+    left: 60px;    
+    margin-top: 100px;    
+}
 
+.noUi-handle {
+    background: white;
+    width: 15px;
+    height: 40px;
+    margin: -16px 0 0 -8px;
+}
 
+.RedScale .noUi-base {
+    background : blue;  
+}
+.RedScale .noUi-handle {
+    border: 2px solid blue;
+}
 
-
-
+.blueScale .noUi-base {
+    background : red;    
+}
+.blueScale .noUi-handle {
+    border: 2px solid red;
+}
 
