--- a/WebContent/widgets/slider/slider.css
+++ b/WebContent/widgets/slider/slider.css
@@ -1,10 +1,20 @@
+*
+{
+	margin:0px;
+	padding:0px;
+}
+
 .slider {
     position: relative;
     height: 10px;
     width: 50%;
-    left: 60px;    
-    margin-top: 100px;    
+    left: 25%;
+	margin-top:5%;
+	margin-bottom:10%
+	        
 }
+
+
 
 .noUi-handle {
     background: white;
@@ -26,4 +36,40 @@
 .dose .noUi-handle {
     border: 2px solid red;
 }
+
+
+#asthma-text{
+	text-align:center;
+	font-size:1.3em;
+	margin-top:2%;
+}
+
+#methacholine-text{
+	text-align:center;
+	font-size:1.3em;
+	margin-top:2%;
+}
+#cross-section-text{
+	text-align:center;
+	font-size:1.3em;
+	margin-top:2%;
+}
+
+
+
+#continuous
+{
+	margin-top:2%;
+}
+
+#discrete
+{
+	margin-top:2%;
+}
+#cross_section
+{
+	
+	margin-top:2%;
+}
+
 
