--- a/WebContent/widgets/slider/slider.css
+++ b/WebContent/widgets/slider/slider.css
@@ -56,20 +56,78 @@
 }
 
 
-
 #continuous
 {
-	margin-top:2%;
+	margin-top:5%;
 }
 
 #discrete
 {
-	margin-top:2%;
+	margin-top:10%;
 }
 #cross_section
 {
 	
-	margin-top:2%;
+	margin-top:5%;
 }
+
+.multiple{
+	position:relative;
+}
+
+.single{
+	position:relative;
+}
+
+#multi_plot{
+	position:relative;
+	margin-bottom:5%;
+	margin-top:3%;
+}
+
+#Airway_methacholine{
+	position:absolute;
+	margin-left:80%;
+	margin-top:40%;
+	color:blue;
+	font-size:14px;
+}
+
+#Airway_Description{
+	margin-left:20%;
+	color:blue;
+	font-size:14px;
+}
+
+ #ASM_methacholine{
+	position:absolute;
+	margin-left:2%;
+	margin-top:35%;
+	color:blue;
+	font-size:14px;
+}
+
+#single_plot {
+	position:relative;
+	margin-top:5%;
+	margin-bottom:5%;
+}
+
+#ASM_Description
+{
+	margin-left:20%;
+	color:red;
+	font-size:14px;
+}
+
+#ASM_methacholine{
+	position:absolute;
+	margin-left:80%;
+	margin-top:40%;
+	color:red;
+	font-size:14px;
+}
+
+
 
 
