--- a/WebContent/widgets/spinner/spinner.css
+++ b/WebContent/widgets/spinner/spinner.css
@@ -1,6 +1,6 @@
 .ui-spinner {
 	height: 50px;
-	width: 120px;
+	width: 150px;
 
 }
 
@@ -11,9 +11,62 @@
 
 .ui-spinner-input {
 	height: 30px;
-	width: 80px;
+	width: 100px;
 }
 
 input[type="text"] {
     font-size:25px;
+	margin-top:2%;
+}
+
+/*
+#A_spinner
+{
+	position:absolute;
+}
+
+#B_spinner
+{
+	position:absolute;
+}
+
+#C_spinner
+{
+	position:absolute;
+}
+
+#D_spinner
+{
+	position:absolute;
+}
+
+#xmax_spinner
+{
+	position:absolute;
+}
+
+#y_spinner
+{
+	position:absolute;
+	left:10%;
+}
+	
+#z_spinner
+{
+	position:absolute;
+}	
+*/	
+
+#cross_section
+{
+	position:absolute;
+	top:50%;
+	left:45%;
+}
+
+#dynamic_plot
+{
+	position:absolute;
+	top:50%;
+	left:70%;
 }
