--- a/WebContent/widgets/slider/slider.css
+++ b/WebContent/widgets/slider/slider.css
@@ -8,7 +8,7 @@
     position: relative;
     height: 10px;
     width: 50%;
-    left: 25%;
+    left: 30%;
 	margin-top:5%;
 	margin-bottom:10%
 	        
@@ -127,7 +127,10 @@
 	color:red;
 	font-size:14px;
 }
-
+#footer{
+	position:absolute;
+	left:35%;
+}
 
 
 
