--- a/WebContent/widgets/slider/slider.css
+++ b/WebContent/widgets/slider/slider.css
@@ -4,6 +4,9 @@
 	padding:0px;
 }
 
+
+
+
 .slider {
     position: relative;
     height: 10px;
@@ -37,33 +40,44 @@
     border: 2px solid red;
 }
 
-
+#title
+{
+	text-align:center;
+	font-size:1.5em;
+	font-family:Open Sans;
+}
 #asthma-text{
 	text-align:center;
-	font-size:1.3em;
+	font-family:Open Sans;
+	font-size:1.2em;
 	margin-top:2%;
 }
 
 #methacholine-text{
 	text-align:center;
-	font-size:1.3em;
-	margin-top:2%;
+	font-family:Open Sans,sans-serif;;
+	font-size:1.2em;
+	margin-top:15%;
 }
 #cross-section-text{
+	
 	text-align:center;
-	font-size:1.3em;
-	margin-top:2%;
+	font-family:Open Sans;
+	font-size:1.2em;
+	margin-top:15%;
+	
 }
 
 
 #continuous
 {
-	margin-top:5%;
+	
 }
 
 #discrete
 {
 	margin-top:10%;
+	margin-bottom:5%;
 }
 #cross_section
 {
@@ -85,13 +99,7 @@
 	margin-top:3%;
 }
 
-#Airway_methacholine{
-	position:absolute;
-	margin-left:80%;
-	margin-top:40%;
-	color:blue;
-	font-size:14px;
-}
+
 
 
 
