--- a/WebContent/widgets/slider/AHR.css
+++ b/WebContent/widgets/slider/AHR.css
@@ -10,10 +10,10 @@
 .slider {
     position: relative;
     height: 10px;
-    width: 50%;
-    left: 30%;
-	margin-top:5%;
-	margin-bottom:10%
+    width: 60%;
+    left: 20%;
+	margin-top: 20px;
+    margin-bottom: 20px;
 	        
 }
 
@@ -27,35 +27,30 @@
 	text-align:center;
 	font-family:Open Sans;
 	font-size:1.2em;
-	margin-top:2%;
+	margin-top:5%;
 }
 
 #methacholine-text{
 	text-align:center;
-	font-family:Open Sans,sans-serif;;
+	font-family:Open Sans;
 	font-size:1.2em;
-	margin-top:15%;
+	margin-top:100px;
 }
+
 #cross-section-text{
-	
 	text-align:center;
 	font-family:Open Sans;
 	font-size:1.2em;
-	margin-top:15%;
+	margin-top:100px;
 	
 }
 
 
 
-#discrete
-{
-	margin-top:10%;
-	margin-bottom:5%;
-}
 #cross_section
 {
 	
-	margin-top:5%;
+	margin-top:20px;
 }
 
 .multiple{
@@ -71,9 +66,6 @@
 	margin-bottom:5%;
 	margin-top:3%;
 }
-
-
-
 
 
 #single_plot {
